--- a/public/index.html
+++ b/public/index.html
@@ -9,8 +9,9 @@
   <link rel="preconnect" href="https://fonts.googleapis.com" />
   <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
   <link href="https://fonts.googleapis.com/css2?family=Roboto&display=swap" rel="stylesheet" />
+  <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.5.1/jquery.min.js"></script>
   <script src="https://kit.fontawesome.com/fe59f0d15a.js" crossorigin="anonymous"></script>
-  <title>Primer Proyecto React</title>
+  <title>Document</title>
 </head>
 
 <body>
